making module private

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cs-js-test-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "private": true,
   "description": "test utilities for Context Service JS Tests",
   "main": "index.js",
   "bin" : {
