--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "test utilities for Context Service JS Tests",
   "main": "index.js",
-  "bin" : {
-	  "cs-token" : "./bin/token.js"
+  "bin": {
+    "cs-token": "./bin/token.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "0.9.1",
     "chalk": "^1.1.1",
-    "es6-promise": "3.0.2"
+    "es6-promise": "3.0.2",
+    "minimist": "^1.2.0"
   }
 }
