--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cs-token": "./bin/token.js",
 	"cs-pod-create": "./bin/pod.create.js",
 	"cs-pod-get": "./bin/pod.get.js",
-	"cs-pod-delete": "./bin/pod.delete.js"
+	"cs-pod-delete": "./bin/pod.delete.js",
+	"cs-pod-update": "./bin/pod.update.js"
   },
   "repository": {
     "type": "git",
