--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 	"cs-pod-create": "./bin/pod.create.js",
 	"cs-pod-get": "./bin/pod.get.js",
 	"cs-pod-delete": "./bin/pod.delete.js",
-	"cs-pod-update": "./bin/pod.update.js"
+	"cs-pod-update": "./bin/pod.update.js",
+	"cs-customer-create": "./bin/customer.create.js",
+	"cs-customer-get": "./bin/customer.get.js",
+	"cs-customer-delete": "./bin/customer.delete.js",
+	"cs-customer-update": "./bin/customer.update.js"
   },
   "repository": {
     "type": "git",
