--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "cs-js-test-utils",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "private": true,
   "description": "test utilities for Context Service JS Tests",
   "main": "index.js",
   "bin": {
     "cs-token": "./bin/token.js",
-	"cs-pod-create": "./bin/pod.create.js",
-	"cs-pod-get": "./bin/pod.get.js",
-	"cs-pod-delete": "./bin/pod.delete.js",
-	"cs-pod-update": "./bin/pod.update.js",
-	"cs-customer-create": "./bin/customer.create.js",
-	"cs-customer-get": "./bin/customer.get.js",
-	"cs-customer-delete": "./bin/customer.delete.js",
-	"cs-customer-update": "./bin/customer.update.js"
+    "cs-pod-create": "./bin/pod.create.js",
+    "cs-pod-get": "./bin/pod.get.js",
+    "cs-pod-delete": "./bin/pod.delete.js",
+    "cs-pod-update": "./bin/pod.update.js",
+    "cs-customer-create": "./bin/customer.create.js",
+    "cs-customer-get": "./bin/customer.get.js",
+    "cs-customer-delete": "./bin/customer.delete.js",
+    "cs-customer-update": "./bin/customer.update.js",
+    "cs-reporter-jenkins": "./bin/reporter.jenkins.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "axios": "0.9.1",
     "chalk": "^1.1.1",
     "es6-promise": "3.0.2",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "xml2js": "^0.4.17"
   }
 }
