--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cs-js-test-utils",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "private": true,
   "description": "test utilities for Context Service JS Tests",
   "main": "index.js",
   "bin": {
     "cs-token": "./bin/token.js",
+	"cs-admin-token": "./bin/admintoken.js",
     "cs-pod-create": "./bin/pod.create.js",
     "cs-pod-get": "./bin/pod.get.js",
     "cs-pod-delete": "./bin/pod.delete.js",
