--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "chalk": "^1.1.1",
     "es6-promise": "3.0.2",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "request": "^2.78.0",
     "request-promise": "^4.1.1",
+    "rimraf": "^2.5.4",
     "xml2js": "^0.4.17"
   }
 }
