--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bin": {
     "cs-token": "./bin/token.js",
     "cs-admin-token": "./bin/admintoken.js",
+    "cs-user-token": "./bin/usertoken.js",
     "cs-pod-create": "./bin/pod.create.js",
     "cs-pod-get": "./bin/pod.get.js",
     "cs-pod-delete": "./bin/pod.delete.js",
