--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cs-js-test-utils",
+  "name": "cs-utils",
   "version": "1.6.3",
   "private": true,
   "description": "test utilities for Context Service JS Tests",
