--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "querystring": "^0.2.0",
     "request": "^2.78.0",
     "request-promise": "^4.1.1",
+    "request-promise-native": "^1.0.5",
     "rimraf": "^2.5.4",
     "xml2js": "^0.4.17"
   }
