--- a/package.json
+++ b/package.json
@@ -1,49 +1,25 @@
 {
   "name": "cs-utils",
-  "version": "1.6.3",
+  "version": "2.0.0",
   "private": true,
-  "description": "test utilities for Context Service JS Tests",
+  "description": "test utilities for Context Service REST API",
   "main": "lib/index.js",
-  "bin": {
-    "cs-token": "./bin/token.js",
-    "cs-admin-token": "./bin/admintoken.js",
-    "cs-user-token": "./bin/usertoken.js",
-    "cs-pod-create": "./bin/pod.create.js",
-    "cs-pod-get": "./bin/pod.get.js",
-    "cs-pod-delete": "./bin/pod.delete.js",
-    "cs-pod-update": "./bin/pod.update.js",
-    "cs-customer-create": "./bin/customer.create.js",
-    "cs-customer-get": "./bin/customer.get.js",
-    "cs-customer-delete": "./bin/customer.delete.js",
-    "cs-customer-update": "./bin/customer.update.js",
-    "cs-reporter-jenkins": "./bin/reporter.jenkins.js",
-    "cs-jsorg-feature": "./bin/feature.js"
-  },
   "scripts": {
-    "test": "mocha test",
-    "package": "mv `npm pack` cs-js-test-utils.tgz"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@sqbu-github.cisco.com:CBABU/cs-js-test-utils.git"
+    "test": "mocha test"
   },
   "keywords": [
-    "javascript",
-    "utilities"
+    "context service",
+    "cisco"
   ],
-  "author": "context service",
-  "license": "ISC",
+  "author": "Coty Condry <ccondry@cisco.com>",
+  "license": "UNLICENSED",
   "dependencies": {
     "axios": "0.9.1",
     "chalk": "^1.1.1",
     "es6-promise": "3.0.2",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
     "querystring": "^0.2.0",
     "request": "^2.78.0",
     "request-promise": "^4.1.1",
-    "request-promise-native": "^1.0.5",
-    "rimraf": "^2.5.4",
-    "xml2js": "^0.4.17"
+    "request-promise-native": "^1.0.5"
   }
 }
