increase Mocha test default timeout from 2 seconds to 10 seconds

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "test utilities for Context Service REST API",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test --timeout 10000"
   },
   "keywords": [
     "context service",
